[package]
name = "log-archive-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
md5 = "0.7.0"
rayon = "1.10.0"
regex = "1.10.4"
rfd = "0.14.1"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
zip = "1.1.3"
